--- a/website/static/website/css/portfolio.css
+++ b/website/static/website/css/portfolio.css
@@ -1,14 +1,235 @@
 @media only screen and (min-device-width: 0px) and (max-device-width: 600px) {
     .portfoliowrapper{
-        height: calc(100vh - 150px);
+        height: calc(180vh - 150px);
     }
-}
-@media only screen and (min-device-width: 601px) and (max-device-width: 1000px) {
+    .portfioliobubble{
+        padding: 20px;
+        margin: 10px;
+    }
+    .asseticon{
+        width: 200px;
+        height: 200px;
+        margin: 5px;
+    }
+    .asset{
+        column-gap: 15px;
+        padding: 10px;
+    }
+    .title{
+        font-size: 4em;
+    }
+    .asset p{
+        font-size: 2em;
+    }
+    #assets{
+        flex-grow: 1;
+        grid-area: assets;
+    }
+    #money{
+        top: 90px;
+        left: 10px;
+    }
+    .search{
+        min-width: 20vw;
+    }
+    #instructions{
+        min-width: 18vw;
+        grid-area: instruction;
+    }
+    .subtitle{
+        font-size: 2.5em;
+    }
+    .ownedassets{
+        margin-top: 20px;
+    }
+    .note{
+        margin-top: 10px!important;
+        font-size: 1.2em;
+        font-style: italic;
+    }
+    #buy{
+        grid-area: buy;
+    }
     .portfoliowrapper{
-        height: calc(100vh - 100px);
+        grid-template-areas:
+        'instruction'
+        'summary'
+        'assets'
+        'assets'
+        'buy'
+        'buy'
+        'buy';
+        
+    }
+    .sellasset{
+        width: 50px;
+        height: 10px;
+    }
+    .quickbuymenu{
+        margin-top: 20px;
+    }
+    #money{
+        font-weight: 800;
+        background-color: white;
+        font-size: 2em;
+    }
+    #instructioncollection p{
+        margin: 15px;
+        font-size: 1.2em;
+    }
+    .searchButton{
+        width: 40px;
+        height: 36px;
+    }
+    .search{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .searchTerm{
+        padding: 5px;
+        height: 20px;
+    }
+    .wrap{
+        margin-top: 20px;
+        transform: scale(2);
+        margin-bottom: 20px;
+    }
+    #buysellmenu .content p, #buysellmenu .content label{
+        font-size: 1.5em;
+    }
+    #buysellmenu .content #totalAmt{
+        font-weight: 600;
+        height: 50px;
+        font-size: 1.2em;
+    }
+    .closebuysellbutton{
+        right: 10px;
+        top: 10px;
+        width: 50px;
+        height: 50px;
     }
 }
-@media only screen and (min-device-width: 1001px) {
+@media only screen and (min-device-width: 601px) and (max-device-width: 1200px) {
+    .portfoliowrapper{
+        height: calc(120vh - 100px);
+        padding: 10px;
+    }
+    .portfioliobubble{
+        padding: 20px;
+        margin: 10px;
+    }
+    .asseticon{
+        width: 100px;
+        height: 100px;
+        margin: 5px;
+    }
+    .asset{
+        column-gap: 15px;
+        padding: 10px;
+    }
+    .title{
+        font-size: 2em;
+    }
+    .asset p{
+        font-size: 1.2em;
+    }
+    #assets{
+        flex-grow: 1;
+        grid-area: assets;
+    }
+    #money{
+        top: 90px;
+        left: 10px;
+    }
+    .search{
+        min-width: 20vw;
+    }
+    #instructions{
+        min-width: 18vw;
+        grid-area: instruction;
+    }
+    #instructioncollection p{
+        margin: 10px;
+    }
+    .subtitle{
+        font-size: 1.5em;
+    }
+    .ownedassets{
+        margin-top: 20px;
+    }
+    .note{
+        margin-top: 10px!important;
+        font-size: 1.2em;
+        font-style: italic;
+    }
+    #buy{
+        grid-area: buy;
+    }
+    .portfoliowrapper{
+        grid-template-areas:
+        'instruction summary'
+        'instruction summary'
+        'instruction summary'
+        'assets buy'
+        'assets buy'
+        'assets buy'
+        'assets buy'
+        'assets buy'
+        'assets buy'
+        'assets buy'
+        'assets buy';
+        
+    }
+    .sellasset{
+        width: 50px;
+        height: 10px;
+    }
+    .quickbuymenu{
+        margin-top: 20px;
+    }
+    #money{
+        font-weight: 800;
+        background-color: white;
+    }
+    .searchButton{
+        width: 40px;
+        height: 36px;
+        font-size: 20px;
+    }
+    .search{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .searchTerm{
+        padding: 5px;
+        height: 20px;
+    }
+    #instructioncollection p{
+        margin: 10px;
+        font-size: 1em;
+    }
+    .closebuysellbutton{
+        right: 10px;
+        top: 10px;
+        width: 30px;
+        height: 30px;
+    }
+    #buysellmenu .content p, #buysellmenu .content label{
+        font-size: 1.5em;
+    }
+    #buysellmenu .content #totalAmt{
+        font-weight: 600;
+        height: 50px;
+        font-size: 1.2em;
+    }
+    .closebuysellbutton{
+        right: 10px;
+        top: 10px;
+        width: 50px;
+        height: 50px;
+    }
+}
+@media only screen and (min-device-width: 1201px) {
     .portfoliowrapper{
         height: calc(100vh - 100px);
         padding: 10px;
@@ -75,10 +296,44 @@
     .quickbuymenu{
         margin-top: 20px;
     }
+    #money{
+        font-weight: 800;
+        background-color: white;
+    }
+    .searchButton{
+        width: 40px;
+        height: 36px;
+        font-size: 20px;
+    }
+    .search{
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .searchTerm{
+        padding: 5px;
+        height: 20px;
+    }
+    #buysellmenu .content #totalAmt{
+        height: 20px;
+    }
+    .submit{
+        font-size: 1.2em;
+    }
+    .closebuysellbutton{
+        right: 10px;
+        top: 10px;
+        width: 30px;
+        height: 30px;
+    }
 }
 
 .asset p{
     white-space: nowrap;
+}
+
+.orderprice{
+    max-width: 80%;
+    overflow: auto;
 }
 
 .portfoliowrapper{
@@ -168,10 +423,7 @@
     height: 0;
   }
 
-  #money{
-    font-weight: 800;
-    background-color: white;
-  }
+  
 
   .green{
     color: var(--green)!important;
@@ -195,19 +447,37 @@
     grid-area: summary;
 }
 
+#instructioncollection p{
+    font-weight: 600;
+}
+
+.submit{
+    border: 2px solid transparent;
+    background-color: var(--submit-green);
+    width: fit-content;
+    height: fit-content;
+    padding: 10px;
+    border-radius: 10px;
+    color: white;
+    font-weight: 600;
+}
+
+.submit:hover{
+    border: 2px solid var(--accent);
+}
 
 
-
-
-
+.closebuysellbutton{
+    position: absolute;
+    filter:  brightness(0) invert(26%) sepia(92%) saturate(7330%) hue-rotate(357deg) brightness(101%) contrast(116%);
+}
 
 
 
   @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 .search {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    
     width: 100%;
     position: relative;
     display: flex;
@@ -217,8 +487,6 @@
   width: 100%;
   border: 3px solid #00B4CC;
   border-right: none;
-  padding: 5px;
-  height: 20px;
   border-radius: 5px 0 0 5px;
   outline: none;
   color: black;
@@ -229,19 +497,61 @@
 }
 
 .searchButton {
-  width: 40px;
-  height: 36px;
+  
   border: 1px solid var(--accent);
   background: var(--accent);
   text-align: center;
   color: #fff;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
-  font-size: 20px;
 }
 
 .red{
     color: red;
+}
+
+#buysellmenu{
+    display: flex;
+    z-index: 50;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    background: var(--fade);
+    justify-content: center;
+    align-items: center;
+}
+
+#buysellmenu .content{
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+    min-width: 300px;
+    min-height: 200px;
+    max-width: 80%;
+    max-height: 80%;
+    width: min-content;
+    height: fit-content;
+    background-color: white;
+    border-radius: 10px;
+    opacity: 1;
+    padding: 20px;
+    margin: 0;
+}
+
+#buysellmenu .content p, #buysellmenu .content label{
+    margin: 5px 5px;
+    white-space: nowrap;
+    font-weight: 600;
+}
+
+#buysellmenu .content #totalAmt{
+    width: 80%;
+    border-radius: 10px;
+    text-align: center;
 }
 
 /*Resize the wrap to see the search bar change!*/
