--- a/website/static/website/css/portfolio.css
+++ b/website/static/website/css/portfolio.css
@@ -2,7 +2,7 @@
     .portfoliowrapper{
         height: calc(180vh - 150px);
     }
-    .portfioliobubble{
+    .portfoliobubble{
         padding: 20px;
         margin: 10px;
     }
@@ -108,13 +108,16 @@
         width: 50px;
         height: 50px;
     }
+    .menupopup{
+        font-size: 1.8em;
+    }
 }
 @media only screen and (min-device-width: 601px) and (max-device-width: 1200px) {
     .portfoliowrapper{
         height: calc(120vh - 100px);
         padding: 10px;
     }
-    .portfioliobubble{
+    .portfoliobubble{
         padding: 20px;
         margin: 10px;
     }
@@ -225,8 +228,11 @@
     .closebuysellbutton{
         right: 10px;
         top: 10px;
-        width: 50px;
-        height: 50px;
+        width: 30px;
+        height: 30px;
+    }
+    .menupopup{
+        font-size: 1.5em;
     }
 }
 @media only screen and (min-device-width: 1201px) {
@@ -234,7 +240,7 @@
         height: calc(100vh - 100px);
         padding: 10px;
     }
-    .portfioliobubble{
+    .portfoliobubble{
         padding: 20px;
         margin: 10px;
     }
@@ -346,7 +352,7 @@
     grid-auto-rows: minmax(0, 1fr);
 }
 
-.portfioliobubble{
+.portfoliobubble{
     display: flex;
     max-height: 100%;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
@@ -354,7 +360,7 @@
     overflow-y: auto;
 }
 
-.portfioliobubble p{
+.portfoliobubble p{
     margin: 0;
     padding: 0;
 }
@@ -389,10 +395,6 @@
     width: fit-content;
     overflow-x: auto;
     white-space: nowrap;
-    transform: rotateX(180deg);
-}
-
-.flip{
     transform: rotateX(180deg);
 }
 
@@ -529,8 +531,6 @@
     flex-wrap: wrap;
     background-color: white;
     box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
-    min-width: 300px;
-    min-height: 200px;
     max-width: 80%;
     max-height: 80%;
     width: min-content;
@@ -552,6 +552,30 @@
     width: 80%;
     border-radius: 10px;
     text-align: center;
+}
+
+.fa-search:hover{
+    filter: brightness(0) saturate(100%) invert(74%) sepia(91%) saturate(4832%) hue-rotate(84deg) brightness(115%) contrast(132%);;
+}
+
+.submit:hover{
+    cursor: pointer;
+}
+
+.menupopup{
+    position: absolute;
+    top: 50px;
+    right: auto;
+    left: auto;
+    color: red;
+    background-color: white;
+    border-radius: 10px;
+    font-weight: 900;
+}
+
+.menupopup p{
+    margin: 0;
+    padding: 20px;
 }
 
 /*Resize the wrap to see the search bar change!*/
