added price charts

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -142,5 +142,6 @@
     <script src="{% static 'website/js/leaderboardresettimer.js'%}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script src="{% static 'website/js/chart.js'%}"></script>
+    <script src="{% static 'website/js/assetcharts.js'%}"></script>
 
 </html>
