--- a/website/static/website/css/loading.css
+++ b/website/static/website/css/loading.css
@@ -24,7 +24,7 @@
   position: fixed;
   width: 100vw;
   height: 100vh;
-  background-color: white;
+  background-color: var(--background-color);
   z-index: 99;
   top: 0;
 }
