--- a/website/static/website/css/base.css
+++ b/website/static/website/css/base.css
@@ -9,12 +9,30 @@
     --fade: rgba(168,168,168, 0.9);
     --submit-green: #50C878;
     --red: red;
+    --background-color: #2b2b2b;
+    --text-color : white;
+}
+
+html[data-theme='light']{
+    --accent: #00a8e8;
+    --dark-accent: #008cc3;
+    --green: #228B22;
+    --fade: rgba(168,168,168, 0.9);
+    --submit-green: #50C878;
+    --red: red;
+    --background-color: white;
+    --text-color : black;
 }
 
 /* set font for website*/
 html{
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
+    background-color: var(--background-color);
+}
+
+*{
+    color: var(--text-color);
 }
 
 /* remove padding from screen*/
@@ -227,7 +245,7 @@ body { margin: 0; padding: 0;}
 .nav{
     display: flex;
     width: 100%;
-    background-color: white;
+    background-color: var(--background-color);
     justify-content: space-between;
     align-items: center;
     position: fixed;
@@ -319,7 +337,7 @@ body { margin: 0; padding: 0;}
     position: fixed;
     display: flex;
     justify-content: center;
-    background-color: white;
+    background-color: var(--background-color);
     z-index: 4;
     
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
@@ -417,7 +435,7 @@ body { margin: 0; padding: 0;}
     top: 10px;
     box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     align-items: center;
-    background-color: white;
+    background-color: var(--background-color);
     z-index: 5;
 }
 
@@ -443,4 +461,5 @@ body { margin: 0; padding: 0;}
 #page{
     display: flex;
     flex-wrap: wrap;
+    background-color: var(--background-color);
 }
